cm4all-beng-proxy (0.6.20) unstable; urgency=low

  * stock: clear stock after 60 seconds idle
  * hstock: remove empty stocks
  * istream-pipe: fix the direct() return value on error
  * istream-pipe: fix formula in range assertion

 --

cm4all-beng-proxy (0.6.19) unstable; urgency=low

  * http-client: release caller pool after socket release
  * memcached-client: release socket on marshalling error
  * stock: unref caller pool in abort handler
  * stock: lazy cleanup
  * http-cache: copy caller_pool to local variable

 -- Max Kellermann <mk@cm4all.com>  Thu, 24 Sep 2009 16:02:17 +0200

cm4all-beng-proxy (0.6.18) unstable; urgency=low

  * delegate-handler: support conditional GET and ranges
  * file-handler: fix suffix-byte-range-spec parser
  * delegate-helper: call open() with O_CLOEXEC|O_NOCTTY
  * istream-file: don't set FD_CLOEXEC if O_CLOEXEC is available
  * stock: hold caller pool during "get" operation
  * main: free balancer object during shutdown
  * memcached-client: enable socket timeout
  * delegate-stock: set FD_CLOEXEC on socket

 -- Max Kellermann <mk@cm4all.com>  Thu, 24 Sep 2009 10:50:53 +0200

cm4all-beng-proxy (0.6.17) unstable; urgency=low

  * tcp-stock: implemented a load balancer
  * python: accept address list in the ajp() method
  * http-server: added timeout for the HTTP request headers
  * response: close template when the content type is wrong
  * delegate-get: implemented response headers
  * delegate-get: provide status codes and error messages

 -- Max Kellermann <mk@cm4all.com>  Fri, 18 Sep 2009 15:36:57 +0200

cm4all-beng-proxy (0.6.16) unstable; urgency=low

  * tcp-stock: added support for bulldog-tyke
  * sink-buffer: close input if it's not used in the constructor
  * http-cache-memcached: close response body when deserialization fails
  * serialize: fix regression in serialize_uint64()

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Sep 2009 19:26:07 +0200

cm4all-beng-proxy (0.6.15) unstable; urgency=low
